online/urirule01.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: store-dsrule-01
spec:
  host: store-service.default.svc.cluster.local
  subsets:
  - name: app-service-storeuri
    labels:
      app: store
      chapter: istio
      topic: traffic-management
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
