online/urirule02.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rest-dsrule-01
spec:
  host: rest-service.default.svc.cluster.local
  subsets:
  - name: app-service-resturi
    labels:
      app: rest
      chapter: istio
      topic: traffic-management
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
