online/urirule04.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: flask-service-dsrule-01
spec:
  host: flask-service.default.svc.cluster.local
  subsets:
  - name: flask-service-flaskuri
    labels:
      app: flaskapi
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
